--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2587,6 +2587,10 @@ input, select, textarea {
 		}
 
 /* Image */
+	.logoImage {
+		box-shadow: 0px 0px 10px black;
+		border-radius: 25px;
+	}
 
 	.image {
 		border: 0;
